Created UserDto, Interface, and Token service.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=socialapp.db"
   },
+  "TokenKey":"SecretkeySecurityKeySecurityKeySecurityKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
