--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=socialapp"
+    "DefaultConnection": "Data source=socialapp.db"
   },
   "TokenKey":"SecrtkeySecurityKeySecurityKeySecurityKey",
   "Logging": {
